# hoyo-tools

./: .gitignore  Cargo.toml  README.md  config.json.example
src/: config.rs  genshin.rs  hoyo.rs  hsr.rs  main.rs  zzz.rs
