[package]
name = "hoyo-tools"
version = "0.1.0"
edition = "2021"
include = ["config.toml"]

[dependencies]
rookie = "0.5.2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
env_logger = "0.11.3"
log = "0.4.22"
cookie_store = "0.21.0"
bytes = "1.6.1"

[profile.release]
strip = true